--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing users</h1>
-
+<%= link_to 'New User', new_user_path, class: 'button' %>
 <table>
   <thead>
     <tr>
@@ -28,6 +28,6 @@
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New User', new_user_path %>
+
+
