--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Listing posts</h1>
+<%= link_to 'New Post', new_post_path, class: 'button' %>
 
 <table>
   <thead>
@@ -24,6 +25,6 @@
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Post', new_post_path %>
+
+
