--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,5 @@
   <%= @user.description %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), class: 'button' %> 
+
